feat: update gradle to 8.4-rc-1